[Connecting SOAP client]